replace mtex with pak archive

--- a/flt2pak/Makefile
+++ b/flt2pak/Makefile
@@ -1,4 +1,4 @@
-TARGET   = flt2mtex
+TARGET   = flt2pak
 CLASSES  = flt_tile
 SOURCE   = $(TARGET).c $(CLASSES:%=%.c)
 OBJECTS  = $(TARGET).o $(CLASSES:%=%.o)
@@ -6,15 +6,18 @@ HFILES   = $(CLASSES:%=%.h)
 OPT      = -O2 -Wall
 #OPT      = -g -Wall
 CFLAGS   = $(OPT) -I.
-LDFLAGS  = -Ltexgz -ltexgz -Lnedgz -lnedgz -lm -lz
+LDFLAGS  = -Llibpak -lpak -Ltexgz -ltexgz -Lnedgz -lnedgz -lm -lz
 CCC      = gcc
 
 all: $(TARGET)
 
-$(TARGET): $(OBJECTS) texgz nedgz
+$(TARGET): $(OBJECTS) libpak texgz nedgz
 	$(CCC) $(OPT) $(OBJECTS) -o $@ $(LDFLAGS)
 
-.PHONY: texgz nedgz
+.PHONY: libpak texgz nedgz
+
+libpak:
+	$(MAKE) -C libpak
 
 texgz:
 	$(MAKE) -C texgz
@@ -24,8 +27,9 @@ nedgz:
 
 clean:
 	rm -f $(OBJECTS) *~ \#*\# $(TARGET)
+	$(MAKE) -C libpak clean
 	$(MAKE) -C texgz clean
 	$(MAKE) -C nedgz clean
-	rm texgz nedgz flt_tile.h flt_tile.c
+	rm libpak texgz nedgz flt_tile.h flt_tile.c
 
 $(OBJECTS): $(HFILES)
