--- a/subbluemarble/Makefile
+++ b/subbluemarble/Makefile
@@ -4,17 +4,19 @@ SOURCE   = $(TARGET).c $(CLASSES:%=%.c)
 OBJECTS  = $(TARGET).o $(CLASSES:%=%.o)
 HFILES   = $(CLASSES:%=%.h)
 OPT      = -O2 -Wall
-#OPT      = -g -Wall
 CFLAGS   = $(OPT) -I.
-LDFLAGS  = -Ltexgz -ltexgz -Lnedgz -lnedgz -lpng -lm -lz
+LDFLAGS  = -Ltexgz -ltexgz -Lnedgz -lnedgz -Llibcc -lcc -lm -lz
 CCC      = gcc
 
 all: $(TARGET)
 
-$(TARGET): $(OBJECTS) texgz nedgz
+$(TARGET): $(OBJECTS) libcc texgz nedgz
 	$(CCC) $(OPT) $(OBJECTS) -o $@ $(LDFLAGS)
 
-.PHONY: texgz nedgz
+.PHONY: libcc texgz nedgz
+
+libcc:
+	$(MAKE) -C libcc
 
 texgz:
 	$(MAKE) -C texgz
@@ -24,8 +26,9 @@ nedgz:
 
 clean:
 	rm -f $(OBJECTS) *~ \#*\# $(TARGET)
+	$(MAKE) -C libcc clean
 	$(MAKE) -C texgz clean
 	$(MAKE) -C nedgz clean
-	rm texgz nedgz
+	rm lodepng libcc texgz nedgz
 
 $(OBJECTS): $(HFILES)
